better response modalities and generateMedia tool